--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       <!-- Marker -->
       <a-marker preset="hiro">
         <!-- Image Plane -->
-        <a-plane src="https://upload.wikimedia.org/wikipedia/commons/8/89/Narendra_Modi_in_2015.jpg"
-                 position="0 0.5 0"
-                 rotation="-90 0 0"
-                 width="1"
-                 height="1.5">
-        </a-plane>
+        <a-plane src="modi.jpg"
+         position="0 0.5 0"
+         rotation="-90 0 0"
+         width="1"
+         height="1.5"
+         material="side: double">
+</a-plane>
+
       </a-marker>
 
       <a-entity camera></a-entity>
