--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- Marker -->
       <a-marker preset="hiro">
         <!-- Image Plane -->
-        <a-plane src="modi.jpg"
+        <a-plane src="modi_new.jpg"
          position="0 0.5 0"
          rotation="-90 0 0"
          width="1"
